Stylistic and non-functional changes from

PR/49622 (Minor enhancements to if_cpsw)